--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,3 +1,28 @@
 <div class="intro-section">
   <p>SalonMatrix helps you to find the best salon software.</p>
 </div>
+<table class="table index-table">
+  <thead>
+    <tr>
+      <th>Product</th>
+      {{#each site.front_features }}
+      <th class="feature-value" title="{{ name }}"><span class="feature-name">{{ name }}</span></th>
+      {{/each}}
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#compose src='<%= site.data %>/*.md'}}
+    <tr>
+      <td><a href="products/{{@id}}.html">{{ name }}</a></td>
+      {{#each site.front_features }}
+      <td class="feature-value">{{feature_str ../features key '<span class="glyphicon glyphicon-ok"></span>' '<span class="glyphicon glyphicon-remove"></span>' '<span class="glyphicon glyphicon-minus"></span>' }}
+      {{/each}}
+      <td>
+        <a class="btn btn-xs btn-default" href="{{ website }}">Website</a>
+        <a class="btn btn-xs btn-default" href="products/{{@id}}.html">Details</a>
+      </td>
+    </tr>
+    {{/compose}}
+  </tbody>
+</table>
